# LiverSegment

./: CMakeLists.txt
LiverSegment/: CMakeLists.txt  LiverSegment.py
